--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
     <article class="pick-a-date card">
       <h2>Pick a Date</h2>
       <input type="date" id="datePicker" value="2020-01-01"/>
-      <input type="button" value="Calculate" id="datebtn"/>
-      <p id="leapYear">Leap Year: </p>
-      <p id="dayOfYear">Day of the Year: </p>
-
-      <input type="button" value="Test Button" id="testButton"/>
+    </br>
+      <input type="button" value="Fix Date" id="datebtn"/>
+      <!-- <p id="leapYear">Leap Year: </p>
+      <p id="dayOfYear">Day of the Year: </p> -->
     </article>
 
     <arcitle class="gregorian card">
       <h2>Gregorian</h2>
-      <p id="gregorian-current-month">January</p>
+      <p id="gregorian-current-month">January 2020</p>
       <div class="gregorian-calendar">
         <li id="gregarian-Sunday">Su</li>
         <li id="gregarian-Monday">Mo</li>
@@ -42,48 +41,48 @@
         <li id="gregarian-Thursday">Th</li>
         <li id="gregarian-Friday">Fr</li>
         <li id="gregarian-Saturday">Sa</li>
-        <li id="gregarian-1Sun" class="day-highlighter">1</li>
-        <li id="gregorian-1Mon">2</li>
-        <li id="gregorian-1Tue">3</li>
-        <li id="gregorian-1Wed">4</li>
-        <li id="gregorian-1Thu">5</li>
-        <li id="gregorian-1Fri">6</li>
-        <li id="gregorian-1Sat">7</li>
-        <li id="gregorian-2Sun">8</li>
-        <li id="gregorian-2Mon">9</li>
-        <li id="gregorian-2Tue">10</li>
-        <li id="gregorian-2Wed">11</li>
-        <li id="gregorian-2Thu">12</li>
-        <li id="gregorian-2Fri">13</li>
-        <li id="gregorian-2Sat">14</li>
-        <li id="gregorian-3Sun">15</li>
-        <li id="gregorian-3Mon">16</li>
-        <li id="gregorian-3Tue">17</li>
-        <li id="gregorian-3Wed">18</li>
-        <li id="gregorian-3Thu">19</li>
-        <li id="gregorian-3Fri">20</li>
-        <li id="gregorian-3Sat">21</li>
-        <li id="gregorian-4Sun">22</li>
-        <li id="gregorian-4Mon">23</li>
-        <li id="gregorian-4Tue">24</li>
-        <li id="gregorian-4Wed">25</li>
-        <li id="gregorian-4Thu">26</li>
-        <li id="gregorian-4Fri">27</li>
-        <li id="gregorian-4Sat">28</li>
-        <li id="gregorian-5Sun">29</li>
-        <li id="gregorian-5Mon">30</li>
-        <li id="gregorian-5Tue">31</li>
-        <li id="gregorian-5Wed">32</li>
-        <li id="gregorian-5Thu">33</li>
-        <li id="gregorian-5Fri">34</li>
-        <li id="gregorian-5Sat">35</li>
+        <li id="greg-1" class="day-highlighter">1</li>
+        <li id="greg-2">2</li>
+        <li id="greg-3">3</li>
+        <li id="greg-4">4</li>
+        <li id="greg-5">5</li>
+        <li id="greg-6">6</li>
+        <li id="greg-7">7</li>
+        <li id="greg-8">8</li>
+        <li id="greg-9">9</li>
+        <li id="greg-10">10</li>
+        <li id="greg-11">11</li>
+        <li id="greg-12">12</li>
+        <li id="greg-13">13</li>
+        <li id="greg-14">14</li>
+        <li id="greg-15">15</li>
+        <li id="greg-16">16</li>
+        <li id="greg-17">17</li>
+        <li id="greg-18">18</li>
+        <li id="greg-19">19</li>
+        <li id="greg-20">20</li>
+        <li id="greg-21">21</li>
+        <li id="greg-22">22</li>
+        <li id="greg-23">23</li>
+        <li id="greg-24">24</li>
+        <li id="greg-25">25</li>
+        <li id="greg-26">26</li>
+        <li id="greg-27">27</li>
+        <li id="greg-28">28</li>
+        <li id="greg-29">29</li>
+        <li id="greg-30">30</li>
+        <li id="greg-31">31</li>
+        <li id="greg-32">32</li>
+        <li id="greg-33">33</li>
+        <li id="greg-34">34</li>
+        <li id="greg-35">35</li>
       </div>
       <div class="day-highlighter"></div>
     </arcitle>
 
     <article class="fixed card">
       <h2>Fixed</h2>
-      <p id="fixed-current-month">January</p>
+      <p id="fixed-current-month">January 2020</p>
       <div class="fixed-calendar">
         <li id="fixed-Sunday">Su</li>
         <li id="fixed-Monday">Mo</li>
@@ -121,12 +120,14 @@
         <li id="fixed-27">27</li>
         <li id="fixed-28">28</li>
       </div>
+    </br>
+      <li id="fixed-29"></li>
       <div class="day-highlighter"></div>
     </article>
 
   </section>
   <section class="exposition-container">
-    <article class="what-is-the-ifc card">
+    <!-- <article class="what-is-the-ifc card">
       <h2>What is the International Fixed Calendar?</h2>
       <p class="exposition">Simply put, it’s a replacement system for time keeping that uses 13 months, each of which contains exactly 28 days. No more, no less. Every month has precisely 4 weeks. The first week of every month consists of the 1st through the 7th, and every third Wednesday is always the 18th. Because every 18th is a Wednesday in every month. <a href="https://en.wikipedia.org/wiki/International_Fixed_Calendar" target="_blank">This Fixed Calendar</a> makes planning and scheduling a breeze, from month to month, year to year.</p>
       <p class="exposition">Since each month only has 28 days, our normal January through December only gets us a total of 336 days, which isn’t quite enough. That’s where the 13th month comes in, squeezed right between June and July this new month is called Sol for the sunny weather it gets (apologies once again lower hemisphere). That extra month gives us 28 more days for a total of 364. In order to solve this problem a special holiday is added to the end of the year. Year Day! This one trips a lot of people up, so stick with me. Year Day comes after Saturday, December 28th and before Sunday, January 1st… meaning it has no day of the week. It simply exists as an extra day for everyone to celebrate making through another year. Huzzah! What about leap years, you ask? Easy. Every 4 years another celebratory, holiday which holds no day of the week status, sneaks between Saturday, June 28th and Sunday, Sol 1st - Leap Day!</p>
@@ -134,7 +135,7 @@
       <p class="exposition">The Fixed Calendar solves all those problems… or at least answers those questions with ease. Were you born on January 9th? Congratulations - your birthday is on a Monday this year. And next year… the year you were born, and every year. Bummed out that you’ll never have a Saturday birthday? Yeah, that’s actually one of the strongest arguments against this calendar reform, but you can always celebrate your birthday on the nearest weekend if you need to. Or really, what’s wrong with having a reason to love at least one Monday each year?</p>
       <p class="exposition">Even if you don’t want to completely adopt the Fixed Calendar into your life, it’s always fun to find out your Fixed birthday… since some translations need to occur in order to make it all work. Everything is based off the numbered day of the year, which is why your birthday might change. See, if you were born on Saturday, September 8th 1990 that was the 251st day of the year. The 251st day of the year per the Fixed Calendar however, would have you born on August 26th, a Thursday. Born on July 15th, 1980? You're a lucky one, that's the 197th day of a leap year - you're a Leap Day Baby! No day of the week for you, simply put your birthday is Sol 29th, Leap Day and it only comes around once every 4 years. You're looking younger already.
       </p>
-    </article>
+    </article> -->
 
     <!-- <article class="who-made card">
       <h2>Who Even Made This Goofy Site?</h2>
