--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
       <input type="date" id="datePicker" value="2020-01-01"/>
     </br>
       <input type="button" value="Fix Date" id="datebtn"/>
-      <!-- <p id="leapYear">Leap Year: </p>
-      <p id="dayOfYear">Day of the Year: </p> -->
     </article>
 
     <arcitle class="gregorian card">
@@ -41,41 +39,48 @@
         <li id="gregarian-Thursday">Th</li>
         <li id="gregarian-Friday">Fr</li>
         <li id="gregarian-Saturday">Sa</li>
-        <li id="greg-1" class="day-highlighter">1</li>
-        <li id="greg-2">2</li>
-        <li id="greg-3">3</li>
-        <li id="greg-4">4</li>
-        <li id="greg-5">5</li>
-        <li id="greg-6">6</li>
-        <li id="greg-7">7</li>
-        <li id="greg-8">8</li>
-        <li id="greg-9">9</li>
-        <li id="greg-10">10</li>
-        <li id="greg-11">11</li>
-        <li id="greg-12">12</li>
-        <li id="greg-13">13</li>
-        <li id="greg-14">14</li>
-        <li id="greg-15">15</li>
-        <li id="greg-16">16</li>
-        <li id="greg-17">17</li>
-        <li id="greg-18">18</li>
-        <li id="greg-19">19</li>
-        <li id="greg-20">20</li>
-        <li id="greg-21">21</li>
-        <li id="greg-22">22</li>
-        <li id="greg-23">23</li>
-        <li id="greg-24">24</li>
-        <li id="greg-25">25</li>
-        <li id="greg-26">26</li>
-        <li id="greg-27">27</li>
-        <li id="greg-28">28</li>
-        <li id="greg-29">29</li>
-        <li id="greg-30">30</li>
-        <li id="greg-31">31</li>
-        <li id="greg-32">32</li>
-        <li id="greg-33">33</li>
-        <li id="greg-34">34</li>
-        <li id="greg-35">35</li>
+        <li id="greg-1"></li>
+        <li id="greg-2"></li>
+        <li id="greg-3"></li>
+        <li id="greg-4" class="day-highlighter">1</li>
+        <li id="greg-5">2</li>
+        <li id="greg-6">3</li>
+        <li id="greg-7">4</li>
+        <li id="greg-8">5</li>
+        <li id="greg-9">6</li>
+        <li id="greg-10">7</li>
+        <li id="greg-11">8</li>
+        <li id="greg-12">9</li>
+        <li id="greg-13">10</li>
+        <li id="greg-14">11</li>
+        <li id="greg-15">12</li>
+        <li id="greg-16">13</li>
+        <li id="greg-17">14</li>
+        <li id="greg-18">15</li>
+        <li id="greg-19">16</li>
+        <li id="greg-20">17</li>
+        <li id="greg-21">18</li>
+        <li id="greg-22">19</li>
+        <li id="greg-23">20</li>
+        <li id="greg-24">21</li>
+        <li id="greg-25">22</li>
+        <li id="greg-26">23</li>
+        <li id="greg-27">24</li>
+        <li id="greg-28">25</li>
+        <li id="greg-29">26</li>
+        <li id="greg-30">27</li>
+        <li id="greg-31">28</li>
+        <li id="greg-32">29</li>
+        <li id="greg-33">30</li>
+        <li id="greg-34">31</li>
+        <li id="greg-35"></li>
+        <li id="greg-36"></li>
+        <li id="greg-37"></li>
+        <li id="greg-36"></li>
+        <li id="greg-37"></li>
+        <li id="greg-36"></li>
+        <li id="greg-37"></li>
+        <li id="greg-38"></li>
       </div>
       <div class="day-highlighter"></div>
     </arcitle>
