Add Google Analytics, Update CSS, Add Exposition
- Add Google Analytics
- Clear up CSS, better responsive for mobile devices
- Rewrite exposition and enable under app

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-32627719-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-32627719-2');
+</script>
+
   <meta charset="utf-8">
 
   <title>International Fixed Calendar Calculator</title>
@@ -132,24 +142,14 @@
 
   </section>
   <section class="exposition-container">
-    <!-- <article class="what-is-the-ifc card">
+    <article class="what-is-the-ifc card">
       <h2>What is the International Fixed Calendar?</h2>
-      <p class="exposition">Simply put, it’s a replacement system for time keeping that uses 13 months, each of which contains exactly 28 days. No more, no less. Every month has precisely 4 weeks. The first week of every month consists of the 1st through the 7th, and every third Wednesday is always the 18th. Because every 18th is a Wednesday in every month. <a href="https://en.wikipedia.org/wiki/International_Fixed_Calendar" target="_blank">This Fixed Calendar</a> makes planning and scheduling a breeze, from month to month, year to year.</p>
-      <p class="exposition">Since each month only has 28 days, our normal January through December only gets us a total of 336 days, which isn’t quite enough. That’s where the 13th month comes in, squeezed right between June and July this new month is called Sol for the sunny weather it gets (apologies once again lower hemisphere). That extra month gives us 28 more days for a total of 364. In order to solve this problem a special holiday is added to the end of the year. Year Day! This one trips a lot of people up, so stick with me. Year Day comes after Saturday, December 28th and before Sunday, January 1st… meaning it has no day of the week. It simply exists as an extra day for everyone to celebrate making through another year. Huzzah! What about leap years, you ask? Easy. Every 4 years another celebratory, holiday which holds no day of the week status, sneaks between Saturday, June 28th and Sunday, Sol 1st - Leap Day!</p>
-      <p class="exposition">Sounds a bit crazy, right? But it’s probably very similar to whatever calendar you’re familiar with, but way easier to use. If you’re from the United States, you’re likely used to using the <a href="https://en.wikipedia.org/wiki/Gregorian_calendar" target="_blank">Gregorian Calendar</a>, you know… January, February, March, April and so on? How many days are in May again? What’s that rhyme… Thirty days hath September, April, June, and November or something like that? Or maybe you use the knuckle-valley trick? Perhaps you’ve just committed how many days each month has to long term memory. Well, in that case… what day of the month does Thanksgiving fall on this year? What about next year? How about Easter? Labor Day? Father’s Day? Mother’s Day? Your own birthday?</p>
-      <p class="exposition">The Fixed Calendar solves all those problems… or at least answers those questions with ease. Were you born on January 9th? Congratulations - your birthday is on a Monday this year. And next year… the year you were born, and every year. Bummed out that you’ll never have a Saturday birthday? Yeah, that’s actually one of the strongest arguments against this calendar reform, but you can always celebrate your birthday on the nearest weekend if you need to. Or really, what’s wrong with having a reason to love at least one Monday each year?</p>
-      <p class="exposition">Even if you don’t want to completely adopt the Fixed Calendar into your life, it’s always fun to find out your Fixed birthday… since some translations need to occur in order to make it all work. Everything is based off the numbered day of the year, which is why your birthday might change. See, if you were born on Saturday, September 8th 1990 that was the 251st day of the year. The 251st day of the year per the Fixed Calendar however, would have you born on August 26th, a Thursday. Born on July 15th, 1980? You're a lucky one, that's the 197th day of a leap year - you're a Leap Day Baby! No day of the week for you, simply put your birthday is Sol 29th, Leap Day and it only comes around once every 4 years. You're looking younger already.
+      <p class="exposition">The Fixed Calendar is a replacement system for time keeping where every month contains exactly 28 days. Every month has precisely four weeks beginning on Sunday, the 1st and ends on Saturday the 28th. That means every month’s days are the same number, so every single 17th a Tuesday for example. The first Friday of the month is always the 6th. This calendar makes planning and scheduling a breeze since month to month, year to year, dates are consistent, predictable, and easy to remember and calculate.</p>
+      <p class="exposition">You may have already done the math, but 28 days in each month only adds up to 336 days total. To remedy this, a new, 13th month is added between June and July, called Sol to represent the summer (sorry lower hemisphere). With Sol’s 28 days the total comes to 364. With only one single day as an outlier, the Fixed Calendar simply calls for a special, celebration day to occur once a year. So every year, after Saturday, December 28th but before Sunday, January 1st, the world celebrates Year Day! This day falls on December 29th but has no day of the week. Everyone simply gets an extra day between their Saturday and Sunday.</p>
+      <p class="exposition">Similar to the Gregorian Calendar, every four years is a Leap Year, containing Leap Day - a similar celebratory day as Year Day - on Sol 29th. Just like Year Day, Leap Day has no day of the week (so everyone gets a 3-day weekend).</p>
+      <p class="exposition">Go ahead and find your Fixed Birthday, Anniversary, or what today should be if it were fixed. If this all sounds a bit crazy, don’t take just my word for it. You can read more about the <a href="https://en.wikipedia.org/wiki/International_Fixed_Calendar" target="_blank">International Fixed Calendar</a> and even how the <a href="https://gizmodo.com/how-the-quest-for-a-perfectly-rational-calendar-created-1697616634" target="_blank">Eastman Kodak Company</a> used this system for almost 60 years!
       </p>
-    </article> -->
-
-    <!-- <article class="who-made card">
-      <h2>Who Even Made This Goofy Site?</h2>
-      <div class="social-links">
-        <li><a href="https://www.jeremy-aldrich.com/">Jeremy-Aldrich.com</a></li>
-        <li><a href="https://www.instagram.com/jer_draws/">Instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/jeremy-aldrich-05aa1b5a/">LinkedIn</a></li>
-      </div>
-    </article> -->
+    </article>
   </section>
   <script src="js/scripts.js"></script>
 </body>
