--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   gtag('config', 'UA-32627719-2');
 </script>
+  <link rel="icon" type="image/png" href="https://jsaldrich1.github.io/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://jsaldrich1.github.io/favicon-128x128.png" sizes="128x128">
+  <link rel="icon" type="image/png" href="https://jsaldrich1.github.io/favicon-192x192.png" sizes="192x192">
 
   <meta charset="utf-8">
 
