--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
   gtag('config', 'UA-32627719-2');
 </script>
 
-<!-- generics -->
-<link rel="icon" href="/path/to/favicon-32.png" sizes="32x32">
-<link rel="icon" href="/path/to/favicon-57.png" sizes="57x57">
-<link rel="icon" href="/path/to/favicon-76.png" sizes="76x76">
-<link rel="icon" href="/path/to/favicon-96.png" sizes="96x96">
-<link rel="icon" href="/path/to/favicon-128.png" sizes="128x128">
-<link rel="icon" href="/path/to/favicon-192.png" sizes="192x192">
-<link rel="icon" href="/path/to/favicon-228.png" sizes="228x228">
+  <!-- generics -->
+  <link rel="icon" href="/favicon-32.png" sizes="32x32">
+  <link rel="icon" href="/favicon-128.png" sizes="128x128">
+  <link rel="icon" href="/favicon-152.png" sizes="152x1526">
+  <link rel="icon" href="/favicon-167.png" sizes="167x167">
+  <link rel="icon" href="/favicon-180.png" sizes="180x180">
+  <link rel="icon" href="/favicon-192.png" sizes="192x192">
+  <link rel="icon" href="/favicon-196.png" sizes="196x196">
 
-<!-- Android -->
-<link rel="shortcut icon" sizes="196x196" href=“/path/to/favicon-196.png">
+  <!-- Android -->
+  <link rel="shortcut icon" sizes="196x196" href="/favicon-196.png">
 
-<!-- iOS -->
-<link rel="apple-touch-icon" href="/path/to/favicon-120.png" sizes="120x120">
-<link rel="apple-touch-icon" href="path/to/favicon-152.png" sizes="152x152">
-<link rel="apple-touch-icon" href="path/to/favicon-180.png" sizes="180x180">
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="/favicon-128.png" sizes="128x128">
+  <link rel="apple-touch-icon" href="/favicon-152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="/favicon-180.png" sizes="180x180">
 
-<!-- Windows 8 IE 10-->
-<meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="/path/to/favicon-144.png">
-
-<!-- Windows 8.1 + IE11 and above -->
-<meta name="msapplication-config" content="/path/to/browserconfig.xml" />
+  <!-- Windows 8 IE 10-->
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="/favicon-152.png">
 
   <meta charset="utf-8">
 
